# DeepRare

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: interface.py
config/: clinical_mvp.template.json
docker/: entrypoint.sh  runtime-env.yaml
docs/: 20260421-deeprare-web-workflow-and-yk-ferta-plan.md  20260423-yk-ferta-api-contract-v1.md  20260423-yk-ferta-llm-call-inventory.md  20260423-yk-ferta-local-diagnosis-workflow-summary.md  20260423-yk-ferta-productization-execution-plan.md  20260423-yk-ferta-responsibility-boundary.md  20260424-yk-ferta-demo-frontend-implementation-plan.md  20260428-yk-ferta-deeprare-ui-element-mapping.md  20260428-yk-ferta-online-retrieval-governance-plan.md  20260429-yk-ferta-containerization-design.md  20260429-yk-ferta-delivery-checklist.md  20260429-yk-ferta-deployment-handoff-boundary.md  20260507-yk-ferta-diagnosis-ranking-and-confidence-plan.md  deeprare-workflow-summary.md  fertility-private-testing-case-bank.md  fertility-public-case-bank-schema.md  migration-notes.md  repo-layout.md  yk-ferta-clinical-mvp-design.md  yk-ferta-task-workflow-architecture.md
envs/: install-yk-ferta-dev-cpu.sh  yk-ferta-dev-cpu.yaml
legacy/deeprare_reference/: README.md
scripts/: README.md  build_fertility_case_vector_index.py  build_fertility_public_case_bank.py  build_private_testing_case_bank.py  enrich_private_case_bank_with_hpo.py  run_public_case_benchmark.py
skills/yk-ferta-clinical-product/: SKILL.md
src/yk_ferta/: __init__.py  cli.py  (+1 more)
tools/: hpo_search.py  llm_agent.py
(+38 files in other folders)
