[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yk-ferta"
version = "0.1.0"
description = "yk-FERTA (Fertility Assistant) development workspace"
requires-python = ">=3.10"
dependencies = [
    "ddgs>=9,<10",
    "fastapi>=0.115,<1",
    "uvicorn>=0.30,<1",
]

[project.scripts]
yk-ferta-clinical-mvp = "yk_ferta.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
